--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zawadi Esube | About Me</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Zawadi Esube | Get to Know Me</title>
+    <link rel="stylesheet" href="Style.CSS">
     <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">
+        
 </head>
-
 <body>
 
      <header>
@@ -20,9 +22,9 @@
                 </div>
                 <ul id="MenuItems">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="aboutme.html">About Me</a></li>
-                    <li><a href="education.html">Education</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="AboutMe.html">About Me</a></li>
+                    <li><a href="Education.html">Education</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -91,35 +93,35 @@
         </form>
     </div>
 <!----------footer------->
-<footer>
     <div class="footer-box">
-        <div class="container">
-            <div class="row">
-                <div class="col-4">
-                    <img src="AboutMeLogo.png" width="125px">
-                </div>
-                <div class="col-4">
-                    <h3>You're Amazing!</h3>
-                </div>
-                <div class="col-4">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-4">
+                        <img src="AboutMeLogo.png" width="125px">
+                    </div>
+                    <div class="col-4">
+                        <h3>You're Amazing!</h3>
+                    </div>
+                    <div class="col-4">
                     <h3>Find Me Here</h3>
-                    <ul class="social-links">
-                        <li>
-                            <a href="https://instagram.com/c_ad_eau_/" target="_blank">
-                                <i class="fab fa-instagram"></i> Instagram
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://linkedin.com/in/zawadi-esube" target="_blank">
-                                <i class="fab fa-linkedin"></i> LinkedIn
-                            </a>
-                        </li>
-                    </ul>
+                        <ul class="social-links">
+                            <li>
+                                <a href="https://instagram.com/c_ad_eau_/" target="_blank">
+                                    <i class="fab fa-instagram"></i> Instagram
+                                </a>
+                            </li>
+                             <li>
+                                <a href="https://linkedin.com/in/zawadi-esube" target="_blank">
+                                    <i class="fab fa-linkedin"></i> LinkedIn
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
+        </footer>
+
     </div>
-</footer>
 </body>
 </html>
-
