--- a/AboutMe.html
+++ b/AboutMe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zawadi Esube | Get to Know Me</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.CSS">
     <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet">
     <link href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">
         
@@ -102,4 +102,5 @@
     </div>
 </body>
 </html>
+
 
