--- a/Education.html
+++ b/Education.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zawadi Esube | Get to Know Me</title>
-    <link rel="stylesheet" href="Style.CSS">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet">
     <link href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">
         
@@ -44,11 +44,10 @@
             <br>
             <img src="decaturcentral.jpg" width="300px">
         </div>
-        <p>Hi there; I am pleased to share the highlights of my educational journey, which has been both transformative and rewarding.</p>
-        </p>
 
         <p>
-            I graduated from Decatur Central High School with an Academic and Technical Honors Diploma,<br>
+            Hi there; I am pleased to share the highlights of my educational journey, which has been both transformative and rewarding.<br>
+            I graduated from Decatur Central High School with an Academic and Technical Honors Diploma,
             achieving a rank in the top 20% of my class of 374 students.
         </p>
 
@@ -141,6 +140,3 @@
         </footer>
     </div>
 </html>
-
-
-
