--- a/Education.html
+++ b/Education.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zawadi Esube | Get to Know Me</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.CSS">
     <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet">
     <link href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">
         
@@ -44,7 +44,6 @@
             <br>
             <img src="decaturcentral.jpg" width="300px">
         </div>
-
         <p>
             Hi there; I am pleased to share the highlights of my educational journey, which has been both transformative and rewarding.<br>
             I graduated from Decatur Central High School with an Academic and Technical Honors Diploma,
@@ -140,3 +139,4 @@
         </footer>
     </div>
 </html>
+
