--- a/Contact.html
+++ b/Contact.html
@@ -31,11 +31,12 @@
     
     <!-----------contact-------->
     <div class="contact-container">
-        <form action="" class="contact-left">
+        <form action="https://api.web3forms.com/submit" method="POST" class="contact-left">
             <div class="contact-left-title">
                 <h2>Get in touch</h2>
                 <hr>
             </div>
+            <input type="hidden" name="access_key" value="a3de0f06-ca59-4507-b3f0-29aaeaa1bd20">
             <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
             <input type="email" name="email" placeholder="Your Email" class="contact-inputs" required>
             <textarea name="message" placeholder="Your Message" class="contact-inputs" required></textarea>
@@ -75,4 +76,5 @@
     </div>
 </body>
 </html>
+
 
