--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zawadi Esube | Get to Know Me</title>
+    <title>Zawadi Esùbe | Get to Know Me</title>
     <link rel="stylesheet" href="Style.CSS">
     <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -125,3 +125,4 @@
     </div>
 </body>
 </html>
+
