--- a/AboutMe.html
+++ b/AboutMe.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zawadi Esube | Get to Know Me</title>
+    <title>Zawadi Esùbe | Get to Know Me</title>
     <link rel="stylesheet" href="Style.CSS">
     <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet">
     <link href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">
@@ -102,5 +102,6 @@
     </div>
 </body>
 </html>
+
 
 
