--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="col-1">
                 <h1>The Gift Within</h1>
                 <br>
-                <p>Welcome! My name is Zawadi Esube, a dedicated student at Ivy Tech Community College, 
+                <p>Welcome! My name is Zawadi Esùbe, a dedicated student at Ivy Tech Community College, 
                 <br>currently pursuing my Associate of Applied Science degree in Software Development. 
                 <br>Join me on my journey as I explore the dynamic world of technology and software creation!
                 </p>
@@ -125,4 +125,5 @@
     </div>
 </body>
 </html>
+
 
