--- a/AboutMe.html
+++ b/AboutMe.html
@@ -39,7 +39,7 @@
                 <h5>Who Am I?</h5>
                 <br>
                 <p>
-                    Hello, my name is Zawadi Esùbe, I am 19-year-old on a journey of self-discovery and personal growth.<br>
+                    Hello, my name is Zawadi Esùbe, I am 19-years-old on a journey of self-discovery and personal growth.<br>
                     I am currently pursuing my associate’s degree at Ivy Tech Community College.<br>
                     As I navigate this journey, I am exploring the exciting world of technology while developing my personal abilities and technical skills.<br><br>
 
@@ -102,6 +102,7 @@
     </div>
 </body>
 </html>
+
 
 
 
