--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="bgkBob_XY9RTFBMLLDicP67NApEqj8s9if6auw7AKo8" />
     <title>Zawadi Esùbe | Get to Know Me</title>
     <link rel="stylesheet" href="Style.CSS">
     <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet">
@@ -125,5 +126,6 @@
     </div>
 </body>
 </html>
+
 
 
