--- a/AboutMe.html
+++ b/AboutMe.html
@@ -44,7 +44,7 @@
                     As I navigate this journey, I am exploring the exciting world of technology while developing my personal abilities and technical skills.<br><br>
 
                      My name can be difficult for many to pronounce, but I’ll help you: it’s Zaa-WA-Diy, E-SÙ-Be.<br>
-                    My first name means “gift,” and while my last name means "a guy born in a family of many girls", both names have significantly shaped my identity.<br>
+                    My first name means “gift,” and while my last name means "a guy born in a family of many girls- orginally my grandpa's older brother's name", both names have significantly shaped my identity.<br>
                     My first name has taught me to cherish every moment as if it were a special gift.<br><br>
 
                     To understand my last name, we need to explore its origins.<br>
@@ -102,6 +102,7 @@
     </div>
 </body>
 </html>
+
 
 
 
