--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                 <p>Welcome! My name is Zawadi Esùbe, a dedicated student at Ivy Tech Community College, 
                 <br>currently pursuing my Associate of Applied Science degree in Software Development. 
                 <br>Join me on my journey as I explore the dynamic world of technology and software creation!
+                <br>My name can be difficult for many to pronounce, but I’ll help you: it’s Zaa-WA-Diy, E-SÙ-Be.<br>
+                My first name means “gift,” which has taught me to cherish every moment as if it were a special gift.<br>
                 </p>
 
             </div>
@@ -126,6 +128,7 @@
     </div>
 </body>
 </html>
+
 
 
 
