--- a/AboutMe.html
+++ b/AboutMe.html
@@ -43,10 +43,8 @@
                     I am currently pursuing my associate’s degree at Ivy Tech Community College.<br>
                     As I navigate this journey, I am exploring the exciting world of technology while developing my personal abilities and technical skills.<br><br>
 
-                     My name can be difficult for many to pronounce, but I’ll help you: it’s Zaa-WA-Diy, E-SÙ-Be.<br>
-                    My first name means “gift,” and while my last name means "a guy born in a family of many girls- orginally my grandpa's older brother's name", both names have significantly shaped my identity.<br>
-                    My first name has taught me to cherish every moment as if it were a special gift.<br><br>
-
+                    My last name can be the most difficult to pronounce, but I’ll help you: it’s E-SÙ-Be.<br>
+                    My last name is a passed on name meaning "a guy born in a family of many girls- orginally my grandpa's older brother's name", both names have significantly shaped my identity.<br>
                     To understand my last name, we need to explore its origins.<br>
                     It comes from the Democratic Republic of Congo and is spoken by the Babembe ethnic group.<br>
                     To me, my last name carries deep meaning because it serves as a reminder of who I am and where I come from, culturally and in terms of my identity.<br><br>
@@ -102,6 +100,7 @@
     </div>
 </body>
 </html>
+
 
 
 
