--- a/AboutMe.html
+++ b/AboutMe.html
@@ -42,19 +42,18 @@
                     Hello, my name is Zawadi Esùbe, I am 19-years-old on a journey of self-discovery and personal growth.<br>
                     I am currently pursuing my associate’s degree at Ivy Tech Community College.<br>
                     As I navigate this journey, I am exploring the exciting world of technology while developing my personal abilities and technical skills.<br><br>
+                </p>
 
-                    My last name can be the most difficult to pronounce, but I’ll help you: it’s E-SÙ-Be.<br>
-                    My last name is a passed on name meaning "a guy born in a family of many girls- orginally my grandpa's older brother's name", both names have significantly shaped my identity.<br>
-                    To understand my last name, we need to explore its origins.<br>
-                    It comes from the Democratic Republic of Congo and is spoken by the Babembe ethnic group.<br>
-                    To me, my last name carries deep meaning because it serves as a reminder of who I am and where I come from, culturally and in terms of my identity.<br><br>
-
+                <p>
+                    My last name can be challenging to pronounce, but I’m happy to help you with it: it’s pronounced E-SÙ-Be.<br>
+                    This name holds significant meaning for me, as it represents my heritage and serves as a reminder of my cultural background.
+                </p>
+                <p>
                     Aside from school, I spend half of my time working, while the other portion is dedicated to attending my church choir meetings.<br>
                     My job is not just any job; even though it may not require professional skills that some people consider essential, it holds significant value for me.<br>
                     Growing up, I was never a people person, and engaging in conversations with others always felt challenging.<br>
                     However, since starting my first real job, I’ve learned how to hold conversations, which has been beneficial overall.<br>
                     These interactions have taught me to appreciate other people’s perspectives and, most importantly, have helped me develop communication skills that will benefit my future career.<br><br>
-
                     Apart from work, my hobbies include cooking, learning, and spending time on YouTube.<br>
                     I’m not an outdoors person, but I typically use my YouTube time to learn new things.<br>
                     Currently, I’m learning to code.<br>
@@ -100,6 +99,7 @@
     </div>
 </body>
 </html>
+
 
 
 
