--- a/Education.html
+++ b/Education.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet">
     <link href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">
         
-</head>
+</\ead>
 <body>
 
      <header>
@@ -22,7 +22,7 @@
                 <ul id="MenuItems">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="AboutMe.html">About Me</a></li>
-                    <li><a href="Education.html">Education</a></li>
+                    <li><a href="Education.html">Education</a></li>]=
                     <li><a href="Contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -35,74 +35,44 @@
     <div class="small-container">
         <h2 class="title">Education</h2>
         <div class="education-row">
-            <div class="col-2">
-                <img src="GraduationPhoto1.jpg" width="300px">
-            </div> 
-        <div class="col-2">
-            <br>
-            <h5>Class of 2024</h5>
-            <br>
-            <img src="decaturcentral.jpg" width="300px">
-        </div>
+        <h1>High School</h1>
         <p>
-            Hi there; I am pleased to share the highlights of my educational journey, which has been both transformative and rewarding.<br>
-            I graduated from Decatur Central High School with an Academic and Technical Honors Diploma,
-            achieving a rank in the top 20% of my class of 374 students.
+            • Graduated from Decatur Central High School
+                – Earned an Academic and Technical Honors Diploma
+                – Ranked in the top 20% of a class of 374 students
+            • Engaged in diverse academic projects
+                – Completed team-based and independent assignments
+                – Developed strong problem-solving and critical thinking skills
+            • Gained transferable skills
+                – Strengthened abilities in collaboration, adaptability, and effective communication
+                – Demonstrated consistent academic performance and personal growth
         </p>
-
-        <p>
-            My academic path began at the Salt Lake Center for Science Education (SLCSE) High School in Utah,<br>
-            where I was fortunate to immerse myself in math and science through hands-on learning experiences and field trips.<br>
-            At SLCSE, I actively participated in the MESA club, which focused on fostering teamwork, critical thinking, and problem-solving skills.<br>
-            A particularly memorable highlight was our visit to the Hansen Dome Theater,<br>
-            where I gained a deeper understanding of the universe through a unique blend of arts, storytelling, and film.
-        </p>
-        <p>
-            In 2021, I transitioned to Indiana, continuing my education at Decatur Central.<br>
-            I successfully completed my sophomore year and quickly moved into my junior year, which presented numerous opportunities.<br>
-            I received an invitation to apply for membership in the National Honor Society (NHS)<br>
-            and had the chance to tour the Area 31 Career Center, where I subsequently enrolled in the Emergency Medical Technician (EMT) program.
-        </p>
-
-        <p>
-            Completing my junior year seamlessly led into my senior year, which was characterized by both challenges and significant growth.<br>
-            Throughout my final year, I served as an active member of the National Honor Society<br>
-            while participating in a job-ready program at Area 31 Career Center,<br>
-            where I earned certifications in CPR and Emergency Dispatch.<br>
-            Being part of the EMT program and NHS allowed me to further develop my leadership, problem-solving, and community service skills,<br>
-            reinforcing my passion for teamwork and collaboration.
-        </p>
-
-        <p>
-            This journey has not only shaped my academic pursuits<br>
-            but has also instilled in me a strong commitment to making a positive impact in my community.
-        </p>
-    </div>
-    <div>
-        <div class="education-row">
-            <div class="col-5">
-                <br>
-                <h5>College Journey</h5>
-                <br>
-                <img src="IvyTech.Indy.jpg" width="300px">   
-            </div>
-            <p>
-                Hi, my name is Zawadi.<br>
-                I am an IT student at Ivy Tech Community College, pursuing an Associate of Applied Science in Software Development.<br>
-                My journey reflects a deep commitment to aligning my passion for design and development with a successful career in technology.<br><br>
-
-                I have not yet had the opportunity to be part of a significant project that fully utilizes my skills;<br>
-                however, I am eager to contribute to initiatives that allow me to showcase my design and creative abilities.<br>
-                Although my experience in larger endeavors is limited, I have actively put my design and creative skills to the test independently,<br>
-                which has significantly contributed to my professional growth.<br>
-                This process has motivated me to apply the skills I have acquired in my coursework to real-world situations.<br>
-                I am enthusiastic about collaborating on projects that will further develop my capabilities and impact.
+        <h5>College Journey</h5>
+         <p>
+            Currently pursuing an Associate of Applied Science in Software Development at Ivy Tech Community College – Indianapolis, IN<br>
+            Expected Graduation: May 2026<br><br>
+            Throughout my academic journey, I’ve engaged in hands-on projects that have strengthened my technical skills and deepened my understanding of software development.<br>
+            These experiences reflect my ability to work independently and collaboratively while applying classroom knowledge to real-world scenarios.<br>
+            <h5>Project Highlights</h5>
+            • Online Bookstore Data Structuring (May 2025)
+                – Independently created and transmitted semi-structured data using Oracle Apex, Excel, and Notepad++
+                – Developed JSON and XML files to store bookstore data
+                – Earned a 100% grade on the assignment
+            • Research on IT in Medical Diagnosis (May 2025)
+                – Conducted independent research on the impact of technology in healthcare
+                – Utilized Microsoft Word, PowerPoint, and Grammarly for documentation and presentation
+                – Received 100% grades on both the research paper and presentation
+            • Personal Website Development (August 2025)
+                – Designed and built an original website using Visual Studio Code, GitHub, and Grammarly
+                – Focused on layout, content, and accessibility
+                – Achieved a 98% score for the project
+            • Team Payroll Program (August 2025)
+                – Collaborated on developing a payroll system using Raptor flowcharting software
+                – Contributed to implementation and testing phases
+                – Project received a 100% team grade
             </p>
-        </div>
-        <a href="index.html" class="btn">Home &#8594</a>
-
     </div>
-
+    <a href="index.html" class="btn">Home &#8594</a>
 
 <!----------footer------->
     <div class="footer-box">
@@ -134,7 +104,9 @@
             </div>
         </footer>
     </div>
+</body>
 </html>
+
 
 
 
