--- a/Education.html
+++ b/Education.html
@@ -39,40 +39,40 @@
         <br>
         <h5>High School Education</h5>
         <p>
-            Graduated from Decatur Central High School
-            • Earned an Academic and Technical Honors Diploma
-            • Ranked in the top 20% of a class of 374 students
-            Engaged in diverse academic projects
-            • Completed team-based and independent assignments
-            • Developed strong problem-solving and critical thinking skills
-            Gained transferable skills
-            • Strengthened abilities in collaboration, adaptability, and effective communication
-            • Demonstrated consistent academic performance and personal growth
+            Graduated from Decatur Central High School<br>
+            • Earned an Academic and Technical Honors Diploma<br>
+            • Ranked in the top 20% of a class of 374 students<br>
+            Engaged in diverse academic projects<br>
+            • Completed team-based and independent assignments<br>
+            • Developed strong problem-solving and critical thinking skills<br>
+            Gained transferable skills<br>
+            • Strengthened abilities in collaboration, adaptability, and effective communication<br>
+            • Demonstrated consistent academic performance and personal growth<br>
         </p>
         <h5>College Journey</h5>
         <br>
          <p>
             Currently pursuing an Associate of Applied Science in Software Development at Ivy Tech Community College – Indianapolis, IN<br>
-            Expected Graduation: May 2026<br><br>
+            Expected Graduation: May 2026<br>
             Throughout my academic journey, I’ve engaged in hands-on projects that have strengthened my technical skills and deepened my understanding of software development.<br>
             These experiences reflect my ability to work independently and collaboratively while applying classroom knowledge to real-world scenarios.<br>
             <h5>Project Highlights</h5>
             <br>
-            Online Bookstore Data Structuring (May 2025)
-            • Independently created and transmitted semi-structured data using Oracle Apex, Excel, and Notepad++
-            • Developed JSON and XML files to store bookstore data
-            • Earned a 100% grade on the assignment
-            Research on IT in Medical Diagnosis (May 2025)
-            • Conducted independent research on the impact of technology in healthcare
-            • Utilized Microsoft Word, PowerPoint, and Grammarly for documentation and presentation
-            • Received 100% grades on both the research paper and presentation
-            Personal Website Development (August 2025)
-            • Designed and built an original website using Visual Studio Code, GitHub, and Grammarly
-            • Focused on layout, content, and accessibility
-            • Achieved a 98% score for the project
-            Team Payroll Program (August 2025)
-            • Collaborated on developing a payroll system using Raptor flowcharting software
-            • Contributed to implementation and testing phases
+            Online Bookstore Data Structuring (May 2025)<br>
+            • Independently created and transmitted semi-structured data using Oracle Apex, Excel, and Notepad++<br>
+            • Developed JSON and XML files to store bookstore data<br>
+            • Earned a 100% grade on the assignment<br>
+            Research on IT in Medical Diagnosis (May 2025)<br>
+            • Conducted independent research on the impact of technology in healthcare<br>
+            • Utilized Microsoft Word, PowerPoint, and Grammarly for documentation and presentation<br>
+            • Received 100% grades on both the research paper and presentation<br>
+            Personal Website Development (August 2025)<br>
+            • Designed and built an original website using Visual Studio Code, GitHub, and Grammarly<br>
+            • Focused on layout, content, and accessibility<br>
+            • Achieved a 98% score for the project<br>
+            Team Payroll Program (August 2025)<br>
+            • Collaborated on developing a payroll system using Raptor flowcharting software<br>
+            • Contributed to implementation and testing phases<br>
             • Project received a 100% team grade
         </p>
     </div>
@@ -110,6 +110,7 @@
     </div>
 </body>
 </html>
+
 
 
 
