--- a/Education.html
+++ b/Education.html
@@ -31,52 +31,69 @@
     </header>
 
 
-    <!-----------education categories---------->
-    <div class="small-container">
-        <h2 class="title">Education</h2>
-        <div class="education-row">
+<!-----------education categories---------->
+<div class="small-container">
+    <h2 class="title">Education</h2>
+    <div class="education-row">
         <h1>My Academic Path</h1>
-        <br>
-        <h5>High School Education</h5>
+
+        <!-- High School Section -->
+        <h3>High School Education</h3>
         <p>
-            Graduated from Decatur Central High School<br>
+            <strong>Decatur Central High School – Indianapolis, IN</strong><br>
             • Earned an Academic and Technical Honors Diploma<br>
-            • Ranked in the top 20% of a class of 374 students<br>
-            Engaged in diverse academic projects<br>
+            • Ranked in the top 20% of a class of 374 students<br><br>
+
+            <strong>Academic Experience:</strong><br>
             • Completed team-based and independent assignments<br>
-            • Developed strong problem-solving and critical thinking skills<br>
-            Gained transferable skills<br>
-            • Strengthened abilities in collaboration, adaptability, and effective communication<br>
+            • Developed strong problem-solving and critical thinking skills<br><br>
+
+            <strong>Transferable Skills:</strong><br>
+            • Strengthened collaboration, adaptability, and communication<br>
             • Demonstrated consistent academic performance and personal growth<br>
         </p>
-        <h5>College Journey</h5>
-        <br>
-         <p>
-            Currently pursuing an Associate of Applied Science in Software Development at Ivy Tech Community College – Indianapolis, IN<br>
-            Expected Graduation: May 2026<br>
-            Throughout my academic journey, I’ve engaged in hands-on projects that have strengthened my technical skills and deepened my understanding of software development.<br>
-            These experiences reflect my ability to work independently and collaboratively while applying classroom knowledge to real-world scenarios.<br>
-            <h5>Project Highlights</h5>
-            <br>
-            Online Bookstore Data Structuring (May 2025)<br>
-            • Independently created and transmitted semi-structured data using Oracle Apex, Excel, and Notepad++<br>
-            • Developed JSON and XML files to store bookstore data<br>
-            • Earned a 100% grade on the assignment<br>
-            Research on IT in Medical Diagnosis (May 2025)<br>
-            • Conducted independent research on the impact of technology in healthcare<br>
-            • Utilized Microsoft Word, PowerPoint, and Grammarly for documentation and presentation<br>
-            • Received 100% grades on both the research paper and presentation<br>
-            Personal Website Development (August 2025)<br>
-            • Designed and built an original website using Visual Studio Code, GitHub, and Grammarly<br>
-            • Focused on layout, content, and accessibility<br>
-            • Achieved a 98% score for the project<br>
-            Team Payroll Program (August 2025)<br>
-            • Collaborated on developing a payroll system using Raptor flowcharting software<br>
-            • Contributed to implementation and testing phases<br>
-            • Project received a 100% team grade
+
+        <!-- College Section -->
+        <h3>College Journey</h3>
+        <p>
+            <strong>Associate of Applied Science in Software Development</strong><br>
+            Ivy Tech Community College – Indianapolis, IN<br>
+            Expected Graduation: May 2026<br><br>
+
+            Throughout my academic journey, I’ve engaged in hands-on projects that have strengthened my technical skills and deepened my understanding of software development. These experiences reflect my ability to work independently and collaboratively while applying classroom knowledge to real-world scenarios.
         </p>
+
+        <!-- Project Highlights -->
+        <h4>Project Highlights</h4>
+        <ul>
+            <li>
+                <strong>Online Bookstore Data Structuring (May 2025)</strong><br>
+                • Used Oracle Apex, Excel, and Notepad++<br>
+                • Created JSON and XML files for semi-structured data<br>
+                • Earned a 100% grade
+            </li>
+            <li>
+                <strong>Research on IT in Medical Diagnosis (May 2025)</strong><br>
+                • Researched technology’s impact on healthcare<br>
+                • Used Microsoft Word, PowerPoint, and Grammarly<br>
+                • Received 100% grades on both paper and presentation
+            </li>
+            <li>
+                <strong>Personal Website Development (August 2025)</strong><br>
+                • Built a custom website using Visual Studio Code, GitHub, and Grammarly<br>
+                • Focused on layout, accessibility, and content<br>
+                • Achieved a 98% score
+            </li>
+            <li>
+                <strong>Team Payroll Program (August 2025)</strong><br>
+                • Collaborated using Raptor flowcharting software<br>
+                • Contributed to design, implementation, and testing<br>
+                • Project received a 100% team grade
+            </li>
+        </ul>
     </div>
-    <a href="index.html" class="btn">Home &#8594</a>
+</div>
+<a href="index.html" class="btn">Home &#8594</a>
 
 <!----------footer------->
     <div class="footer-box">
@@ -110,6 +127,7 @@
     </div>
 </body>
 </html>
+
 
 
 
