--- a/AboutMe.html
+++ b/AboutMe.html
@@ -83,6 +83,7 @@
                                 <a href="https://linkedin.com/in/zawadi-esube" target="_blank">
                                     <i class="fab fa-linkedin"></i> LinkedIn
                                 </a>
+                                <a href="https://github.com/zesube" target="_blank">GitHub</a>
                             </li>
                         </ul>
                     </div>
@@ -93,6 +94,7 @@
     </div>
 </body>
 </html>
+
 
 
 
