--- a/Education.html
+++ b/Education.html
@@ -111,6 +111,7 @@
                                 <a href="https://linkedin.com/in/zawadi-esube" target="_blank">
                                     <i class="fab fa-linkedin"></i> LinkedIn
                                 </a>
+                                <a href="https://github.com/zesube" target="_blank">GitHub</a>
                             </li>
                         </ul>
                     </div>
@@ -120,6 +121,7 @@
     </div>
 </body>
 </html>
+
 
 
 
