--- a/Education.html
+++ b/Education.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet">
 
             
-</\ead>
+</head>
 <body>
 
      <header>
@@ -121,6 +121,7 @@
     </div>
 </body>
 </html>
+
 
 
 
