--- a/Education.html
+++ b/Education.html
@@ -22,7 +22,7 @@
                 <ul id="MenuItems">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="AboutMe.html">About Me</a></li>
-                    <li><a href="Education.html">Education</a></li>]=
+                    <li><a href="Education.html">Education</a></li>
                     <li><a href="Contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -121,6 +121,7 @@
     </div>
 </body>
 </html>
+
 
 
 
