--- a/Education.html
+++ b/Education.html
@@ -108,9 +108,7 @@
                     <h3>Find Me Here</h3>
                         <ul class="social-links">
                              <li>
-                                <a href="https://linkedin.com/in/zawadi-esube" target="_blank">
-                                    <i class="fab fa-linkedin"></i> LinkedIn
-                                </a>
+                                <a href="https://linkedin.com/in/zawadi-esube" target="_blank">Linkedin</a>
                                 <a href="https://github.com/zesube" target="_blank">GitHub</a>
                             </li>
                         </ul>
@@ -121,6 +119,7 @@
     </div>
 </body>
 </html>
+
 
 
 
