--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="bgkBob_XY9RTFBMLLDicP67NApEqj8s9if6auw7AKo8" />
+    <meta name="google-site-verification" content="bgkBob_XY9RTFBMLLDicP67NApEqj8s9if6auw7AKo8">
     <title>Zawadi Esùbe | Get to Know Me</title>
     <link rel="stylesheet" href="Style.CSS">
     <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet">
@@ -98,9 +98,7 @@
                     <h3>Find Me Here</h3>
                         <ul class="social-links">
                              <li>
-                                <a href="https://linkedin.com/in/zawadi-esube" target="_blank">
-                                    <i class="fab fa-linkedin"></i> LinkedIn
-                                </a>
+                                <a href="https://linkedin.com/in/zawadi-esube" target="_blank">Linkedin</a>
                                 <a href="https://github.com/zesube" target="_blank">GitHub</a>
                             </li>
                         </ul>
@@ -112,6 +110,7 @@
     </div>
 </body>
 </html>
+
 
 
 
