--- a/AboutMe.html
+++ b/AboutMe.html
@@ -81,7 +81,9 @@
                         <ul class="social-links">
                              <li>
                                 <a href="https://linkedin.com/in/zawadi-esube" target="_blank">Linkedin</a>
+                                <i class="fab fa-linkedin">Linkedin</i>
                                 <a href="https://github.com/zesube" target="_blank">GitHub</a>
+                                <i class="fab fa-linkedin"GitHub></i> 
                             </li>
                         </ul>
                     </div>
@@ -92,6 +94,7 @@
     </div>
 </body>
 </html>
+
 
 
 
