--- a/Contact.html
+++ b/Contact.html
@@ -58,14 +58,10 @@
                     <h3>Find Me Here</h3>
                         <ul class="social-links">
                             <li>
-                                <a href="https://instagram.com/c_ad_eau_/" target="_blank">
-                                    <i class="fab fa-instagram"></i> Instagram
-                                </a>
-                            </li>
-                             <li>
-                                <a href="https://linkedin.com/in/zawadi-esube" target="_blank">
-                                    <i class="fab fa-linkedin"></i> LinkedIn
-                                </a>
+                                <a href="https://linkedin.com/in/zawadi-esube" target="_blank">Linkedin</a>
+                                <i class="fab fa-linkedin">Linkedin</i>
+                                <a href="https://github.com/zesube" target="_blank">GitHub</a>
+                                <i class="fab fa-linkedin"GitHub></i>
                             </li>
                         </ul>
                     </div>
@@ -76,6 +72,7 @@
     </div>
 </body>
 </html>
+
 
 
 
