--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="Style.CSS">
     <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    
         
 </head>
 <body>
@@ -98,10 +99,10 @@
                     <h3>Find Me Here</h3>
                         <ul class="social-links">
                              <li>
-                                <a href="https://linkedin.com/in/zawadi-esube" target="_blank">Linkedin</a>
-                                <i class="fab fa-linkedin">Linkedin</i>
-                                <a href="https://github.com/zesube" target="_blank">GitHub</a>
-                                <i class="fab fa-linkedin"GitHub></i> 
+                                <a href="https://linkedin.com/in/zawadi" target="_blank">
+                                <img src="linkedin-icon.svg" alt="LinkedIn" class="social-icon">LinkedIn</a>
+                                <a href="https://github.com/zawadi" target="_blank">
+                                <img src="github-icon.svg" alt="GitHub" class="social-icon">GitHub</a>
                             </li>
                         </ul>
                     </div>
@@ -112,6 +113,7 @@
     </div>
 </body>
 </html>
+
 
 
 
