--- a/Education.html
+++ b/Education.html
@@ -108,10 +108,8 @@
                     <h3>Find Me Here</h3>
                         <ul class="social-links">
                              <li>
-                                <a href="https://linkedin.com/in/zawadi-esube" target="_blank">Linkedin</a>
-                                <i class="fab fa-linkedin">Linkedin</i>
+                                <a href="https://linkedin.com/in/zawadi-esube" target="_blank">LinkedIn</a>
                                 <a href="https://github.com/zesube" target="_blank">GitHub</a>
-                                <i class="fab fa-linkedin"GitHub></i> 
                             </li>
                         </ul>
                     </div>
@@ -121,6 +119,7 @@
     </div>
 </body>
 </html>
+
 
 
 
