--- a/index.html
+++ b/index.html
@@ -99,10 +99,8 @@
                     <h3>Find Me Here</h3>
                         <ul class="social-links">
                              <li>
-                                <a href="https://linkedin.com/in/zawadi" target="_blank">
-                                <img src="linkedin-icon.svg" alt="LinkedIn" class="social-icon">LinkedIn</a>
-                                <a href="https://github.com/zawadi" target="_blank">
-                                <img src="github-icon.svg" alt="GitHub" class="social-icon">GitHub</a>
+                                <a href="https://linkedin.com/in/zawadi-esube" target="_blank">LinkedIn</a>
+                                <a href="https://github.com/zesube" target="_blank">GitHub</a>
                             </li>
                         </ul>
                     </div>
@@ -113,6 +111,7 @@
     </div>
 </body>
 </html>
+
 
 
 
