Revise About Me page content and structure
Updated the content and structure of the About Me page to enhance clarity and detail about personal background and experiences.

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -38,28 +38,27 @@
                 <h5>Who Am I?</h5>
                 <br>
                 <p>
-                    Hello, my name is Zawadi Esùbe, I am 19-years-old on a journey of self-discovery and personal growth.<br>
+                    Hello, my name is Zawadi Esùbe, and I am on a journey of self-discovery and personal growth.<br>
+                    My last name can be challenging to pronounce, but I’m happy to help you with it: it’s pronounced E-sÙ-Be.
+                    <br>
                     I am currently pursuing my associate’s degree at Ivy Tech Community College.<br>
-                    As I navigate this journey, I am exploring the exciting world of technology while developing my personal abilities and technical skills.<br><br>
-                </p>
+                    As I navigate this journey, I am exploring the exciting world of technology,<br>
+                    increasing my technical skills while developing my personal abilities. 
+                    <br>
+                    Aside from school, I spend time working as an Amazon Associate at <br>
+                    Amazon Fulfillment Center while also being involved with my church choir.<br>
+                    My job holds significant value for me because it has enhanced my communication<br> 
+                    skills and taught me to appreciate other perspectives, which will not only benefit<br>
+                    me in my professional life but in my personal life as well.
+                    <br>
+                    Apart from work, my hobbies include cooking and learning new things.<br>
+                    I focus on acquiring skills that will benefit my career or that are<br>
+                    valuable for personal development. I am currently learning to code.
 
-                <p>
-                    My last name can be challenging to pronounce, but I’m happy to help you with it: it’s pronounced E-SÙ-Be.<br>
-                    This name holds significant meaning for me, as it represents my heritage and serves as a reminder of my cultural background.
                 </p>
-                <p>
-                    Aside from school, I spend half of my time working, while the other portion is dedicated to attending my church choir meetings.<br>
-                    My job is not just any job; even though it may not require professional skills that some people consider essential, it holds significant value for me.<br>
-                    Growing up, I was never a people person, and engaging in conversations with others always felt challenging.<br>
-                    However, since starting my first real job, I’ve learned how to hold conversations, which has been beneficial overall.<br>
-                    These interactions have taught me to appreciate other people’s perspectives and, most importantly, have helped me develop communication skills that will benefit my future career.<br><br>
-                    Apart from work, my hobbies include cooking, learning, and spending time on YouTube.<br>
-                    I’m not an outdoors person, but I typically use my YouTube time to learn new things.<br>
-                    Currently, I’m learning to code.<br>
-                    I focus on acquiring skills that will benefit my career or that are valuable for personal development.<br>
-                    Being an indoors person is not a waste of time; rather, it is an opportunity to gain new skills.
-                </p>
+                <br>
                 <a href="index.html" class="btn">Home &#8594</a>
+                <br>
 
             </div>
         </div>
@@ -92,6 +91,7 @@
     </div>
 </body>
 </html>
+
 
 
 
